nueva rama y mediaqueris

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -69,7 +69,7 @@
 
                         <br><br>
 
-                        <textarea name="" id="" cols="85" rows="25"
+                        <textarea class="texto" name="" id="" cols="85" rows="25"
                         placeholder="Ingrese su comentario......"></textarea>
 
                         <br><br>
