--- a/pages/hamburguesas.html
+++ b/pages/hamburguesas.html
@@ -79,25 +79,25 @@
                 </div>
 
 
-                <div>
+                <div class="foto__4">
                     <img src="../imagenes/jimmy.jpg" alt="">
                     <h3>JIMMY</h3>
                     <p>170g de carne Angus, cheddar, panceta, cebolla caramelizada, pepinillos y Ronnie BBQ.</p>
                 </div>
 
-                <div>
+                <div class="foto__3">
                     <img src="../imagenes/MOTZ.jpg" alt="">
                     <h3>MOTZ</h3>
                     <p>Doble medallón de 100g de carne Angus, pan de papa, cebolla y queso cheddar.</p>
                 </div>
 
-                <div>
+                <div class="foto__1">
                     <img src="../imagenes/NORMAN.jpg" alt="">
                     <h3>NORMAN</h3>
                     <p>170g carne Angus, pan de papa, muzzarella, queso azul y cebolla crispy.</p>
                 </div>
 
-                <div>
+                <div class="foto__2">
                     <img src="../imagenes/TOTO.jpg" alt="">
                     <h3>TOTO</h3>
                     <p>Doble medallón de 170g de carne Angus, pan negro, panceta crocante, cheddar y Ronnie BBQ.</p>
