--- a/pages/bebidas.html
+++ b/pages/bebidas.html
@@ -6,12 +6,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hamburgueseria</title>
-    <link rel="stylesheet" href="../estilo.css">
-    <link rel="shortcut icon" href="../imagenes hamburguesa/logo_6.png" type="image/x-icon">
+
+    <!--link de BOOTSTRAP-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!--link de imagen de pestaña-->
+    <link rel="shortcut icon" href="imagenes hamburguesa/logo_6.png" type="image/x-icon">
+
+    <!--link WOW JS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!--link mi css-->
+    <link rel="stylesheet" href="../estilo.css">
+
 </head>
 
 <body>
+
+
+
+
+
+
+
+    <!-- COMIENZA EL HEADER-->
+
+
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <img src="../imagenes hamburguesa/logo_6.png" alt="">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="bebidas.html">Bebidas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="hamburguesas.html">Hamburguesas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="ubicacion.html">Ubicacion</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
 
 
 
@@ -19,81 +69,56 @@
         <!--CONTENEDOR PRINCIPAL-->
 
 
+        <!--##### MAIN #####-->
 
-        <!-- COMIENZA EL HEADER-->
+
+        <main id="contenedor">
 
 
-        <header>
-            <div class="logo">
-                <img src="../imagenes hamburguesa/logo_6.png" alt="logo">
+            <div>
+                <img src="../Imagenes bebidas/coca-cola-220ml.jpg" alt="">
+                <h3>Coca-Cola</h3>
+                <p>Lata Comun 250ml <br> $ 150</p>
+                <button>Comprar</button>
             </div>
 
-            <nav class="nav">
-                <ul class="lista-nav animate__animated animate__wobble">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="bebidas.html">Bebidas</a></li>
-                    <li><a href="hamburguesas.html">Hamburguesas</a></li>
-                    <li><a href="ubicacion.html">Ubicacion</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-        </header>
+            <div>
+                <img src="../Imagenes bebidas/coca-cola-zero-250ml.jpg" alt="">
+                <h3>Coca-Zero</h3>
+                <p>Lata Zero 250ml <br> $180</p>
+                <button>Comprar</button>
+            </div>
+
+            <div>
+                <img src="../Imagenes bebidas/fanta-naranja-250ml.jpg" alt="">
+                <h3>Fanta</h3>
+                <p>Lata Comun 250ml <br> $ 150</p>
+                <button>Comprar</button>
+            </div>
 
 
+            <div>
+                <img src="../Imagenes bebidas/schweppes-tonica-250ml.jpg" alt="">
+                <h3>Tonica</h3>
+                <p>Lata Comun 250ml <br> $ 180</p>
+                <button>Comprar</button>
+            </div>
 
+            <div>
+                <img src="../Imagenes bebidas/sprite-lata-250ml.jpg" alt="">
+                <h3>Sprite</h3>
+                <p>Lata Comun 250ml <br> $ 150</p>
+                <button>Comprar</button>
+            </div>
 
+            <div>
+                <img src="../Imagenes bebidas/sprite-lata-zero-250ml.jpg" alt="">
+                <h3>Sprite-zero</h3>
+                <p>Lata Comun 250ml <br> $ 180</p>
+                <button>Comprar</button>
+            </div>
 
-
-<!--##### MAIN #####-->
-
-
-<main id="contenedor">
-
-
-    <div>
-        <img src="../Imagenes bebidas/coca-cola-220ml.jpg" alt="">
-        <h3>Coca-Cola</h3>
-        <p>Lata Comun 250ml <br> $ 150</p>
-        <button>Comprar</button>
-    </div>
-
-    <div>
-        <img src="../Imagenes bebidas/coca-cola-zero-250ml.jpg" alt="">
-        <h3>Coca-Zero</h3>
-        <p>Lata Zero 250ml <br> $180</p>
-        <button>Comprar</button>
-    </div>
-
-    <div>
-        <img src="../Imagenes bebidas/fanta-naranja-250ml.jpg" alt="">
-        <h3>Fanta</h3>
-        <p>Lata Comun 250ml <br> $ 150</p>
-        <button>Comprar</button>
-    </div>
-
-
-    <div>
-        <img src="../Imagenes bebidas/schweppes-tonica-250ml.jpg" alt="">
-        <h3>Tonica</h3>
-        <p>Lata Comun 250ml <br> $ 180</p>
-        <button>Comprar</button>
-    </div>
-
-    <div>
-        <img src="../Imagenes bebidas/sprite-lata-250ml.jpg" alt="">
-        <h3>Sprite</h3>
-        <p>Lata Comun 250ml <br> $ 150</p>
-        <button>Comprar</button>
-    </div>
-
-    <div>
-        <img src="../Imagenes bebidas/sprite-lata-zero-250ml.jpg" alt="">
-        <h3>Sprite-zero</h3>
-        <p>Lata Comun 250ml <br> $ 180</p>
-        <button>Comprar</button>
-    </div>
-
-     </main>
+        </main>
 
 
         <!--COMIENZA EL FOOTER-->
@@ -124,6 +149,20 @@
 
     </div>
     <!--FIN CONTENEDOR PRINCIPAL-->
+
+
+
+    <!--link bootstrap y js del body-->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
