--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,85 +6,140 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../estilo.css">
-    <link rel="shortcut icon" href="../imagenes hamburguesa/logo_6.png" type="image/x-icon">
+
+    <!--link de BOOTSTRAP-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!--link de imagen de pestaña-->
+    <link rel="shortcut icon" href="imagenes hamburguesa/logo_6.png" type="image/x-icon">
+
+    <!--link WOW JS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!--link mi css-->
+    <link rel="stylesheet" href="../estilo.css">
 </head>
 
 <body>
 
 
 
+
+
+
+
+    <!-- COMIENZA EL HEADER-->
+
+
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <img src="../imagenes hamburguesa/logo_6.png" alt="">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="bebidas.html">Bebidas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="hamburguesas.html">Hamburguesas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="ubicacion.html">Ubicacion</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+
+
+
+    <!--comienza el main-->
+    <main>
+        <div class="contacto">
+            <form class="row g-3 needs-validation" novalidate>
+                <div class="col-md-4">
+                    <label for="validationCustom01" class="form-label">Ingrese Nombre</label>
+                    <input type="text" class="form-control" id="validationCustom01" value="Nombre" required>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <label for="validationCustom02" class="form-label">Ingrese Apellido</label>
+                    <input type="text" class="form-control" id="validationCustom02" value="Apellido" required>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <label for="validationCustomUsername" class="form-label">Ingrese Email</label>
+                    <div class="input-group has-validation">
+                        <span class="input-group-text" id="inputGroupPrepend">@</span>
+                        <input type="text" class="form-control" id="validationCustomUsername"
+                            aria-describedby="inputGroupPrepend" required>
+                        <div class="invalid-feedback">
+                            Please choose a username.
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <label for="validationCustom03" class="form-label">Ciudad</label>
+                    <input type="text" class="form-control" id="validationCustom03" required>
+                    <div class="invalid-feedback">
+                        Please provide a valid city.
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <label for="validationCustom04" class="form-label">Sexo</label>
+                    <select class="form-select" id="validationCustom04" required>
+                        <option selected disabled value="">Elija..</option>
+                        <option>M</option>
+                        <option>F</option>
+                        <option>Otro</option>
+                    </select>
+                    <div class="invalid-feedback">
+                        Please select a valid state.
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <label for="validationCustom05" class="form-label">Codigo Postal</label>
+                    <input type="text" class="form-control" id="validationCustom05" required>
+                    <div class="invalid-feedback">
+                        Please provide a valid zip.
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                        <label class="form-check-label" for="invalidCheck">
+                            Acepto terminos y Condiciones
+                        </label>
+                        <div class="invalid-feedback">
+                            You must agree before submitting.
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <button class="btn btn-primary" type="submit">Enviar Formulario</button>
+                </div>
+            </form>
+        </div>
+    </main>
+
     <div id="cajaFlex">
         <!--CONTENEDOR PRINCIPAL-->
-
-
-
-        <!-- COMIENZA EL HEADER-->
-
-
-        <header>
-            <div class="logo">
-                <img src="../imagenes hamburguesa/logo_6.png" alt="logo">
-            </div>
-
-            <nav class="nav">
-                <ul class="lista-nav animate__animated animate__wobble">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="bebidas.html">Bebidas</a></li>
-                    <li><a href="hamburguesas.html">Hamburguesas</a></li>
-                    <li><a href="ubicacion.html">Ubicacion</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-        </header>
-
-
-
-
-
-
-
-        <!--COMIENZA EL MAIN-->
-        <main>
-            
-
-                <form action="" class="formulario">
-
-                    <fieldset>
-                        <legend>Formulario de Contacto</legend>
-                        <label for="user">Usuario</label>
-                        <input type="text" placeholder="Ingrese su Usuario" id="user">
-                        <label for="pass">Contrasena</label>
-                        <input type="password" placeholder="Ingrese su clave" id="pass">
-
-                        <br><br>
-
-                        <select name="Sexo">
-                        <option value="">Elija Su Sexo</option>
-                        <option value="masculino">Masculino</option>
-                        <option value="femenino">Femenino</option>
-                        <option value="otro">Otro</option>
-                        </select>
-
-                        <br><br>
-
-                        <textarea class="texto" name="" id="" cols="85" rows="25"
-                        placeholder="Ingrese su comentario......"></textarea>
-
-                        <br><br>
-
-                        <input type="submit" name="" id="">
-                        <input type="reset" name="" id="">
-                    </fieldset>
-
-                </form>
-
-            
-        </main>
-
-
-
 
         <!--COMIENZA EL FOOTER-->
         <footer>
@@ -114,6 +169,20 @@
 
     </div>
     <!--FIN CONTENEDOR PRINCIPAL-->
+
+
+
+    <!--link bootstrap y js del body-->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
