--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -6,18 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../estilo.css">
-    <link rel="shortcut icon" href="../imagenes hamburguesa/logo_6.png" type="image/x-icon">
+
+    <!--link de BOOTSTRAP-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!--link de imagen de pestaña-->
+    <link rel="shortcut icon" href="imagenes hamburguesa/logo_6.png" type="image/x-icon">
+
+    <!--link WOW JS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!--link mi css-->
+    <link rel="stylesheet" href="../estilo.css">
 </head>
 
 
 <body>
-    
 
 
-<div id="cajaFlex">
-    <!--CONTENEDOR PRINCIPAL-->
 
 
 
@@ -25,81 +31,111 @@
 
 
     <header>
-        <div class="logo">
-            <img src="../imagenes hamburguesa/logo_6.png" alt="logo">
-        </div>
-
-        <nav class="nav">
-            <ul class="lista-nav animate__animated animate__wobble">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="bebidas.html">Bebidas</a></li>
-                <li><a href="hamburguesas.html">Hamburguesas</a></li>
-                <li><a href="ubicacion.html">Ubicacion</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <img src="../imagenes hamburguesa/logo_6.png" alt="">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="bebidas.html">Bebidas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="hamburguesas.html">Hamburguesas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="ubicacion.html">Ubicacion</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
 
 
 
 
+    <div id="cajaFlex">
+        <!--CONTENEDOR PRINCIPAL-->
 
 
-    <!--##### MAIN #####-->
+        <!--##### MAIN #####-->
 
-    <main>
-        <div class="ubicacionFlex">
-            <div class="banner-ubicacion">
-                <iframe class="mapa"
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.4377623174596!2d-58.48504858476998!3d-34.61837618045567!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9e8f863bbd1%3A0xb935690350e3cf3c!2sCampana%201367%2C%20C1416BGI%20CABA!5e0!3m2!1ses-419!2sar!4v1643121710332!5m2!1ses-419!2sar"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <main>
+            <div class="ubicacionFlex">
+                <div class="banner-ubicacion">
+                    <iframe class="mapa"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.4377623174596!2d-58.48504858476998!3d-34.61837618045567!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9e8f863bbd1%3A0xb935690350e3cf3c!2sCampana%201367%2C%20C1416BGI%20CABA!5e0!3m2!1ses-419!2sar!4v1643121710332!5m2!1ses-419!2sar"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
+                <section class="informacion">
+                    <h2>Ubicacio</h2>
+                    <p>Campana 1367 CABA</p>
+                    <h2>Telefono</h2>
+                    <p> 41512-2125</p>
+                    <h2>WhatsApp</h2>
+                    <P>(011) 1565422518</P>
+                </section>
             </div>
-            <section class="informacion">
-                <h2>Ubicacio</h2>
-                <p>Campana 1367 CABA</p>
-                <h2>Telefono</h2>
-                <p> 41512-2125</p>
-                <h2>WhatsApp</h2>
-                <P>(011) 1565422518</P>
-            </section>
-        </div>
 
-    </main>
+        </main>
 
 
 
-    <!-- FIN DEL MAIN-->
+        <!-- FIN DEL MAIN-->
 
 
 
-    <!--COMIENZA EL FOOTER-->
-    <footer>
-        <div class=" flex-1 animate__animated animate__backInUp">
-            <section class="sucursal">
-                <h2>SUCURSALES</h2>
-                <ul>
-                    <li>Villa Del Parque</li>
-                    <li>Recoleta</li>
-                    <li>Palermo</li>
-                </ul>
-            </section>
-            <section class="imagen-footer">
-                <img src="../imagenes hamburguesa/logo_6.png" alt="">
-            </section>
-            <section class="iconos ">
-                <img src="../imagenes hamburguesa/icons8-facebook-50.png" alt="">
-                <img src="../imagenes hamburguesa/icons8-instagram-50.png" alt="">
-                <img src="../imagenes hamburguesa/icons8-twitter-50.png" alt="">
-                <img src="../imagenes hamburguesa/icons8-whatsapp-50.png" alt="">
-            </section>
-        </div>
-    </footer>
+        <!--COMIENZA EL FOOTER-->
+        <footer>
+            <div class=" flex-1 animate__animated animate__backInUp">
+                <section class="sucursal">
+                    <h2>SUCURSALES</h2>
+                    <ul>
+                        <li>Villa Del Parque</li>
+                        <li>Recoleta</li>
+                        <li>Palermo</li>
+                    </ul>
+                </section>
+                <section class="imagen-footer">
+                    <img src="../imagenes hamburguesa/logo_6.png" alt="">
+                </section>
+                <section class="iconos ">
+                    <img src="../imagenes hamburguesa/icons8-facebook-50.png" alt="">
+                    <img src="../imagenes hamburguesa/icons8-instagram-50.png" alt="">
+                    <img src="../imagenes hamburguesa/icons8-twitter-50.png" alt="">
+                    <img src="../imagenes hamburguesa/icons8-whatsapp-50.png" alt="">
+                </section>
+            </div>
+        </footer>
 
 
 
 
-</div>
-<!--FIN CONTENEDOR PRINCIPAL-->
+    </div>
+    <!--FIN CONTENEDOR PRINCIPAL-->
+
+
+    <!--link bootstrap y js del body-->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 
 
 </body>
