agregando card al proyecto

--- a/pages/hamburguesas.html
+++ b/pages/hamburguesas.html
@@ -61,6 +61,18 @@
         </nav>
     </header>
 
+    <!--
+    <div class="card" style="width: 18rem;">
+        <img src="../imagenes/AMY.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">AMY</h5>
+            <p class="card-text">170g de carne Angus, provoleta, tomate perita asado, rúcula y mayonesa de chimichurri.
+            </p>
+             <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+    </div>
+-->
+
 
     <div id="cajaFlex">
         <!--CONTENEDOR PRINCIPAL-->
@@ -72,9 +84,82 @@
 
         <main>
 
-
-
             <section class="fotos">
+
+                <div class="card" style="width: 18rem;">
+                    <img src="../imagenes/AMY.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">AMY</h5>
+                        <p class="card-text">170g de carne Angus, provoleta, tomate perita asado, rúcula y mayonesa de
+                            chimichurri.</p>
+                        <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <img src="../imagenes/cheese-burger.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">SIMPLE CHEESEBURGER</h5>
+                        <p class="card-text">100g de carne Angus, pan y cheddar. Simple y al pie!.</p>
+                        <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <img src="../imagenes/DOBLE CHEES.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">DOBLE CHEESEBURGER</h5>
+                        <p class="card-text">Doble medallón de 100g de carne Angus y doble queso cheddar. </p>
+                        <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <img src="../imagenes/FREDDY.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">FREDDY</h5>
+                        <p class="card-text">170g de carne Angus, cebolla caramelizada, queso brie, tomate perita asado,
+                            rúcula y mostaza
+                            casera.</p>
+                        <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <img src="../imagenes/jimmy.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">JIMMY</h5>
+                        <p class="card-text">170g de carne Angus, cheddar, panceta, cebolla caramelizada, pepinillos y
+                            Ronnie BBQ.</p>
+                        <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <img src="../imagenes/MOTZ.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">MOTZ</h5>
+                        <p class="card-text">Doble medallón de 100g de carne Angus, pan de papa, cebolla y queso
+                            cheddar.</p>
+                        <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <img src="../imagenes/NORMAN.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">NORMAN</h5>
+                        <p class="card-text">170g carne Angus, pan de papa, muzzarella, queso azul y cebolla crispy.</p>
+                        <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <img src="../imagenes/TOTO.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">TOTO</h5>
+                        <p class="card-text">Doble medallón de 170g de carne Angus, pan negro, panceta crocante, cheddar
+                            y Ronnie BBQ.</p>
+                        <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
+                    </div>
+                </div>
+
+            </section>
+
+            <!-- <section class="fotos">
                 <div>
                     <img src="../imagenes/AMY.jpg" alt="">
                     <h3>AMY</h3>
@@ -126,7 +211,7 @@
                 </div>
             </section>
 
-
+-->
 
         </main>
 
