--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--link mi css-->
     <link rel="stylesheet" href="estilo.css">
+    <!-- link de SASS-->
+    <link rel="stylesheet" href="scss/stylo.css">
 
 </head>
 
@@ -93,25 +95,27 @@
 -->
 
 
-<!--CONTENEDOR PRINCIPAL-->
+    <!--CONTENEDOR PRINCIPAL-->
+
+
+
+    <!--COMIENZA EL MAIN-->
+
+
+
+    <div class="main-index">
+        <div class="banner">
+            <img src="imagenes hamburguesa/banner.png" alt="">
+        </div>
+        <div>
+            <iframe class="video" src="https://www.youtube.com/embed/4hpb5zHlu6A" title="YouTube video player"
+                frameborder="100" allow=" autoplay;" allowfullscreen></iframe>
+        </div>
+
+    </div>
+
+
     <div id="cajaFlex">
-
-
-        <!--COMIENZA EL MAIN-->
-
-
-        <main class="main-index">
-            <div class="banner">
-                <img src="imagenes hamburguesa/banner.png" alt="">
-            </div>
-            <div>
-                <iframe class="video" src="https://www.youtube.com/embed/4hpb5zHlu6A" title="YouTube video player"
-                    frameborder="100" allow=" autoplay;" allowfullscreen></iframe>
-            </div>
-        </main>
-
-
-
 
 
 
@@ -130,10 +134,10 @@
                     <img src="imagenes hamburguesa/logo_6.png" alt="">
                 </section>
                 <section class="iconos ">
-                    <img src="imagenes hamburguesa/icons8-facebook-50.png" alt="">
-                    <img src="imagenes hamburguesa/icons8-instagram-50.png" alt="">
-                    <img src="imagenes hamburguesa/icons8-twitter-50.png" alt="">
-                    <img src="imagenes hamburguesa/icons8-whatsapp-50.png" alt="">
+                    <a href="https://www.facebook.com/"><img src="imagenes hamburguesa/logo-facebook.png" alt=""></a>
+                    <a href="https://www.instagram.com/"><img src="imagenes hamburguesa/instagram.png" alt=""></a>
+                    <a href="https://twitter.com/"><img src="imagenes hamburguesa/gorjeo.png" alt=""></a>
+                    <a href="https://www.whatsapp.com/"><img src="imagenes hamburguesa/whatsapp.png" alt=""></a>
                 </section>
             </div>
         </footer>
