--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -17,6 +17,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!--link mi css-->
     <link rel="stylesheet" href="../estilo.css">
+      <!-- link de SASS-->
+      <link rel="stylesheet" href="../scss/stylo.css">
+    
+    
 </head>
 
 <body>
@@ -86,7 +90,7 @@
                     <div class="col-md-12">
                         <label for="validationCustomUsername" class="form-label">Ingrese Email</label>
                         <div class="input-group has-validation">
-                            <span class="input-group-text" id="inputGroupPrepend">@</span>
+                            <!--<span class="input-group-text" id="inputGroupPrepend"></span>-->
                             <input type="text" class="form-control" id="validationCustomUsername"
                                 aria-describedby="inputGroupPrepend" required>
                             <div class="invalid-feedback">
@@ -131,8 +135,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12">
+                    <div class="d-grid gap-2 col-6 mx-auto">
                         <button class="btn btn-primary" type="submit">Enviar Formulario</button>
+                        <button class="btn btn-primary" type="submit">Borrar Formulario</button>
                     </div>
                 </form>
             </div>
@@ -157,10 +162,10 @@
                     <img src="../imagenes hamburguesa/logo_6.png" alt="">
                 </section>
                 <section class="iconos ">
-                    <img src="../imagenes hamburguesa/icons8-facebook-50.png" alt="">
-                    <img src="../imagenes hamburguesa/icons8-instagram-50.png" alt="">
-                    <img src="../imagenes hamburguesa/icons8-twitter-50.png" alt="">
-                    <img src="../imagenes hamburguesa/icons8-whatsapp-50.png" alt="">
+                    <a href="https://www.facebook.com/"><img src="../imagenes hamburguesa/logo-facebook.png" alt=""></a>
+                    <a href="https://www.instagram.com/"><img src="../imagenes hamburguesa/instagram.png" alt=""></a>
+                    <a href="https://twitter.com/"><img src="../imagenes hamburguesa/gorjeo.png" alt=""></a>
+                    <a href="https://www.whatsapp.com/"><img src="../imagenes hamburguesa/whatsapp.png" alt=""></a>
                 </section>
             </div>
         </footer>
