--- a/pages/hamburguesas.html
+++ b/pages/hamburguesas.html
@@ -6,17 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!--link de BOOTSTRAP-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+
 
     <!--link de imagen de pestaña-->
     <link rel="shortcut icon" href="imagenes hamburguesa/logo_6.png" type="image/x-icon">
 
     <!--link WOW JS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+    <!--link de BOOTSTRAP-->
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--link mi css-->
     <link rel="stylesheet" href="../estilo.css">
+    <!--link de SASS-->
+    <link rel="stylesheet" href="../scss/stylo.css">
 </head>
 
 
@@ -61,186 +67,151 @@
         </nav>
     </header>
 
-    <!--
-    <div class="card" style="width: 18rem;">
-        <img src="../imagenes/AMY.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">AMY</h5>
-            <p class="card-text">170g de carne Angus, provoleta, tomate perita asado, rúcula y mayonesa de chimichurri.
-            </p>
-             <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-    </div>
--->
 
 
-    <div id="cajaFlex">
-        <!--CONTENEDOR PRINCIPAL-->
+    <main>
+
+        <div class="container-fluid">
 
 
 
-
-        <!--##### MAIN #####-->
-
-        <main>
-
-            <section class="fotos">
-
-                <div class="card" style="width: 18rem;">
-                    <img src="../imagenes/AMY.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">AMY</h5>
-                        <p class="card-text">170g de carne Angus, provoleta, tomate perita asado, rúcula y mayonesa de
-                            chimichurri.</p>
-                        <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
+            <div class="row mt-2">
+                <div class="col-sm-3 col-xl-3 ">
+                    <div class="card  mt-2 mb-2 ">
+                        <img src="../imagenes/AMY.jpg" class="card-img-top w-50" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">AMY</h5>
+                            <p class="card-text">170g de carne Angus, provoleta, tomate perita asado, rúcula y mayonesa
+                                de
+                                chimichurri.</p>
+                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
+                        </div>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;">
-                    <img src="../imagenes/cheese-burger.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">SIMPLE CHEESEBURGER</h5>
-                        <p class="card-text">100g de carne Angus, pan y cheddar. Simple y al pie!.</p>
-                        <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
+                <div class="col-sm-3 col-xl-3">
+                    <div class="card mt-2 mb-2 ">
+                        <img src="../imagenes/AMY.jpg" class="card-img-top w-50" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">AMY</h5>
+                            <p class="card-text">170g de carne Angus, provoleta, tomate perita asado, rúcula y
+                                mayonesa de
+                                chimichurri.</p>
+                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
+                        </div>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;">
-                    <img src="../imagenes/DOBLE CHEES.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">DOBLE CHEESEBURGER</h5>
-                        <p class="card-text">Doble medallón de 100g de carne Angus y doble queso cheddar. </p>
-                        <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
+                <div class="col-sm-3 col-xl-3">
+                    <div class="card mt-2 mb-2">
+                        <img src="../imagenes/AMY.jpg" class="card-img-top w-50" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">AMY</h5>
+                            <p class="card-text">170g de carne Angus, provoleta, tomate perita asado, rúcula y
+                                mayonesa de
+                                chimichurri.</p>
+                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
+                        </div>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;">
-                    <img src="../imagenes/FREDDY.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">FREDDY</h5>
-                        <p class="card-text">170g de carne Angus, cebolla caramelizada, queso brie, tomate perita asado,
-                            rúcula y mostaza
-                            casera.</p>
-                        <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
-                    </div>
-                </div>
-                <div class="card" style="width: 18rem;">
-                    <img src="../imagenes/jimmy.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">JIMMY</h5>
-                        <p class="card-text">170g de carne Angus, cheddar, panceta, cebolla caramelizada, pepinillos y
-                            Ronnie BBQ.</p>
-                        <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
-                    </div>
-                </div>
-                <div class="card" style="width: 18rem;">
-                    <img src="../imagenes/MOTZ.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">MOTZ</h5>
-                        <p class="card-text">Doble medallón de 100g de carne Angus, pan de papa, cebolla y queso
-                            cheddar.</p>
-                        <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
-                    </div>
-                </div>
-                <div class="card" style="width: 18rem;">
-                    <img src="../imagenes/NORMAN.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">NORMAN</h5>
-                        <p class="card-text">170g carne Angus, pan de papa, muzzarella, queso azul y cebolla crispy.</p>
-                        <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
-                    </div>
-                </div>
-                <div class="card" style="width: 18rem;">
-                    <img src="../imagenes/TOTO.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">TOTO</h5>
-                        <p class="card-text">Doble medallón de 170g de carne Angus, pan negro, panceta crocante, cheddar
-                            y Ronnie BBQ.</p>
-                        <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
+                <div class="col-sm-3 col-xl-3">
+                    <div class="card mt-2 mb-2 ">
+                        <img src="../imagenes/AMY.jpg" class="card-img-top w-50" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">AMY</h5>
+                            <p class="card-text">170g de carne Angus, provoleta, tomate perita asado, rúcula y
+                                mayonesa de
+                                chimichurri.</p>
+                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
+                        </div>
                     </div>
                 </div>
 
-            </section>
-
-            <!-- <section class="fotos">
-                <div>
-                    <img src="../imagenes/AMY.jpg" alt="">
-                    <h3>AMY</h3>
-                    <p>170g de carne Angus, provoleta, tomate perita asado, rúcula y mayonesa de chimichurri.</p>
-                </div>
-
-                <div>
-                    <img src="../imagenes/cheese-burger.jpg" alt="">
-                    <h3>SIMPLE CHEESEBURGER </h3>
-                    <p>100g de carne Angus, pan y cheddar. Simple y al pie!.</p>
-                </div>
-
-                <div>
-                    <img src="../imagenes/DOBLE CHEES.jpg" alt="">
-                    <h3>DOBLE CHEESEBURGER</h3>
-                    <p>Doble medallón de 100g de carne Angus y doble queso cheddar.</p>
-                </div>
-
-                <div>
-                    <img src="../imagenes/FREDDY.jpg" alt="">
-                    <h3>FREDDY</h3>
-                    <p>170g de carne Angus, cebolla caramelizada, queso brie, tomate perita asado, rúcula y mostaza
-                        casera.</p>
-                </div>
-
-
-                <div class="foto__4">
-                    <img src="../imagenes/jimmy.jpg" alt="">
-                    <h3>JIMMY</h3>
-                    <p>170g de carne Angus, cheddar, panceta, cebolla caramelizada, pepinillos y Ronnie BBQ.</p>
-                </div>
-
-                <div class="foto__3">
-                    <img src="../imagenes/MOTZ.jpg" alt="">
-                    <h3>MOTZ</h3>
-                    <p>Doble medallón de 100g de carne Angus, pan de papa, cebolla y queso cheddar.</p>
-                </div>
-
-                <div class="foto__1">
-                    <img src="../imagenes/NORMAN.jpg" alt="">
-                    <h3>NORMAN</h3>
-                    <p>170g carne Angus, pan de papa, muzzarella, queso azul y cebolla crispy.</p>
-                </div>
-
-                <div class="foto__2">
-                    <img src="../imagenes/TOTO.jpg" alt="">
-                    <h3>TOTO</h3>
-                    <p>Doble medallón de 170g de carne Angus, pan negro, panceta crocante, cheddar y Ronnie BBQ.</p>
-                </div>
-            </section>
-
--->
-
-        </main>
-
-        <!-- FIN DEL MAIN-->
-
-
-
-        <!--COMIENZA EL FOOTER-->
-        <footer>
-            <div class=" flex-1 animate__animated animate__backInUp">
-                <section class="sucursal">
-                    <h2>SUCURSALES</h2>
-                    <ul>
-                        <li>Villa Del Parque</li>
-                        <li>Recoleta</li>
-                        <li>Palermo</li>
-                    </ul>
-                </section>
-                <section class="imagen-footer">
-                    <img src="../imagenes hamburguesa/logo_6.png" alt="">
-                </section>
-                <section class="iconos ">
-                    <img src="../imagenes hamburguesa/icons8-facebook-50.png" alt="">
-                    <img src="../imagenes hamburguesa/icons8-instagram-50.png" alt="">
-                    <img src="../imagenes hamburguesa/icons8-twitter-50.png" alt="">
-                    <img src="../imagenes hamburguesa/icons8-whatsapp-50.png" alt="">
-                </section>
             </div>
-        </footer>
+
+
+
+
+
+            <div class="row mt-2  mb-2">
+                <div class="col-sm-3 col-xl-3">
+                    <div class="card mt-2 mb-2">
+                        <img src="../imagenes/AMY.jpg" class="card-img-top w-50" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">AMY</h5>
+                            <p class="card-text">170g de carne Angus, provoleta, tomate perita asado, rúcula y
+                                mayonesa de
+                                chimichurri.</p>
+                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3 col-xl-3">
+                    <div class="card mt-2 mb-2">
+                        <img src="../imagenes/AMY.jpg" class="card-img-top w-50" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">AMY</h5>
+                            <p class="card-text">170g de carne Angus, provoleta, tomate perita asado, rúcula y
+                                mayonesa de
+                                chimichurri.</p>
+                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3 col-xl-3">
+                    <div class="card mt-2 mb-2">
+                        <img src="../imagenes/AMY.jpg" class="card-img-top w-50" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">AMY</h5>
+                            <p class="card-text">170g de carne Angus, provoleta, tomate perita asado, rúcula y
+                                mayonesa de
+                                chimichurri.</p>
+                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3 col-xl-3">
+                    <div class="card mt-2 mb-2">
+                        <img src="../imagenes/AMY.jpg" class="card-img-top w-50" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">AMY</h5>
+                            <p class="card-text">170g de carne Angus, provoleta, tomate perita asado, rúcula y
+                                mayonesa de
+                                chimichurri.</p>
+                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
+                        </div>
+                    </div>
+                </div>
+
+
+
+            </div>
+        </div>
+    </main>
+
+
+
+
+    <!--COMIENZA EL FOOTER-->
+    <footer>
+        <div class=" flex-1 animate__animated animate__backInUp">
+            <section class="sucursal">
+                <h2>SUCURSALES</h2>
+                <ul>
+                    <li>Villa Del Parque</li>
+                    <li>Recoleta</li>
+                    <li>Palermo</li>
+                </ul>
+            </section>
+            <section class="imagen-footer">
+                <img src="../imagenes hamburguesa/logo_6.png" alt="">
+            </section>
+            <section class="iconos ">
+                <a href="https://www.facebook.com/"><img src="../imagenes hamburguesa/logo-facebook.png" alt=""></a>
+                <a href="https://www.instagram.com/"><img src="../imagenes hamburguesa/instagram.png" alt=""></a>
+                <a href="https://twitter.com/"><img src="../imagenes hamburguesa/gorjeo.png" alt=""></a>
+                <a href="https://www.whatsapp.com/"><img src="../imagenes hamburguesa/whatsapp.png" alt=""></a>
+            </section>
+        </div>
+    </footer>
 
 
 
@@ -253,6 +224,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+
 </body>
 
 </html>
