--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!--link mi css-->
     <link rel="stylesheet" href="../estilo.css">
+     <!-- link de SASS-->
+     <link rel="stylesheet" href="../scss/stylo.css">
 
 </head>
 
@@ -64,14 +66,14 @@
 
 
 
-    <div id="cajaFlex">
-        <!--CONTENEDOR PRINCIPAL-->
+    
+       
 
 
         <!--##### MAIN #####-->
 
         <main>
-            <div class="ubicacionFlex">
+            <div id="ubicacionFlex">
                 <div class="banner-ubicacion">
                     <iframe class="mapa"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.4377623174596!2d-58.48504858476998!3d-34.61837618045567!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9e8f863bbd1%3A0xb935690350e3cf3c!2sCampana%201367%2C%20C1416BGI%20CABA!5e0!3m2!1ses-419!2sar!4v1643121710332!5m2!1ses-419!2sar"
@@ -92,8 +94,8 @@
 
 
         <!-- FIN DEL MAIN-->
-
-
+        <div id="cajaFlex">
+ <!--CONTENEDOR PRINCIPAL-->
 
         <!--COMIENZA EL FOOTER-->
         <footer>
@@ -110,10 +112,10 @@
                     <img src="../imagenes hamburguesa/logo_6.png" alt="">
                 </section>
                 <section class="iconos ">
-                    <img src="../imagenes hamburguesa/icons8-facebook-50.png" alt="">
-                    <img src="../imagenes hamburguesa/icons8-instagram-50.png" alt="">
-                    <img src="../imagenes hamburguesa/icons8-twitter-50.png" alt="">
-                    <img src="../imagenes hamburguesa/icons8-whatsapp-50.png" alt="">
+                    <a href="https://www.facebook.com/"><img src="../imagenes hamburguesa/logo-facebook.png" alt=""></a>
+                    <a href="https://www.instagram.com/"><img src="../imagenes hamburguesa/instagram.png" alt=""></a>
+                    <a href="https://twitter.com/"><img src="../imagenes hamburguesa/gorjeo.png" alt=""></a>
+                    <a href="https://www.whatsapp.com/"><img src="../imagenes hamburguesa/whatsapp.png" alt=""></a>
                 </section>
             </div>
         </footer>
