--- a/pages/hamburguesas.html
+++ b/pages/hamburguesas.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Menu/Hamburgueseria</title>
 
 
 
     <!--link de imagen de pestaña-->
-    <link rel="shortcut icon" href="imagenes hamburguesa/logo_6.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../imagenes hamburguesa/logo_6.png " type="image/x-icon">
 
     <!--link WOW JS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -80,46 +80,50 @@
                     <div class="card  mt-2 mb-2 ">
                         <img src="../imagenes/AMY.jpg" class="card-img-top w-50" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">AMY</h5>
+                            <h3 class="card-title">AMY</h3>
                             <p class="card-text">170g de carne Angus, provoleta, tomate perita asado, rúcula y mayonesa
                                 de
                                 chimichurri.</p>
+                                <button class="btn btn-primary" >Comprar</button>
                             <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-3 col-xl-3">
                     <div class="card mt-2 mb-2 ">
-                        <img src="../imagenes/AMY.jpg" class="card-img-top w-50" alt="...">
+                        <img src="../imagenes/cheese-burger.jpg" class="card-img-top w-50" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">AMY</h5>
+                            <h3 class="card-title">CHEESE-BURGUER</h3>
                             <p class="card-text">170g de carne Angus, provoleta, tomate perita asado, rúcula y
                                 mayonesa de
                                 chimichurri.</p>
+                                <button class="btn btn-primary" >Comprar</button>
                             <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-3 col-xl-3">
                     <div class="card mt-2 mb-2">
-                        <img src="../imagenes/AMY.jpg" class="card-img-top w-50" alt="...">
+                        <img src="../imagenes/DOBLE CHEES.jpg" class="card-img-top w-50" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">AMY</h5>
+                            <h3 class="card-title">DOBLE CHEES</h3>
                             <p class="card-text">170g de carne Angus, provoleta, tomate perita asado, rúcula y
                                 mayonesa de
                                 chimichurri.</p>
+                                <button class="btn btn-primary" >Comprar</button>
                             <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-3 col-xl-3">
                     <div class="card mt-2 mb-2 ">
-                        <img src="../imagenes/AMY.jpg" class="card-img-top w-50" alt="...">
+                        <img src="../imagenes/FREDDY.jpg" class="card-img-top w-50" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">AMY</h5>
+                            <h3 class="card-title">FREDDY</h3>
                             <p class="card-text">170g de carne Angus, provoleta, tomate perita asado, rúcula y
                                 mayonesa de
                                 chimichurri.</p>
+                                <button class="btn btn-primary" >Comprar</button>
                             <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
                         </div>
                     </div>
@@ -134,48 +138,52 @@
             <div class="row mt-2  mb-2">
                 <div class="col-sm-3 col-xl-3">
                     <div class="card mt-2 mb-2">
-                        <img src="../imagenes/AMY.jpg" class="card-img-top w-50" alt="...">
+                        <img src="../imagenes/jimmy.jpg" class="card-img-top w-50" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">AMY</h5>
+                            <h3 class="card-title">JIMMY</h3>
                             <p class="card-text">170g de carne Angus, provoleta, tomate perita asado, rúcula y
                                 mayonesa de
                                 chimichurri.</p>
+                                <button class="btn btn-primary" >Comprar</button>
                             <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-3 col-xl-3">
                     <div class="card mt-2 mb-2">
-                        <img src="../imagenes/AMY.jpg" class="card-img-top w-50" alt="...">
+                        <img src="../imagenes/MOTZ.jpg" class="card-img-top w-50" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">AMY</h5>
+                            <h3 class="card-title">MOTZ</h3>
                             <p class="card-text">170g de carne Angus, provoleta, tomate perita asado, rúcula y
                                 mayonesa de
                                 chimichurri.</p>
+                                <button class="btn btn-primary" >Comprar</button>
                             <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-3 col-xl-3">
                     <div class="card mt-2 mb-2">
-                        <img src="../imagenes/AMY.jpg" class="card-img-top w-50" alt="...">
+                        <img src="../imagenes/NORMAN.jpg" class="card-img-top w-50" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">AMY</h5>
+                            <h3 class="card-title">NORMAN</h3>
                             <p class="card-text">170g de carne Angus, provoleta, tomate perita asado, rúcula y
                                 mayonesa de
                                 chimichurri.</p>
+                                <button class="btn btn-primary" >Comprar</button>
                             <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-3 col-xl-3">
                     <div class="card mt-2 mb-2">
-                        <img src="../imagenes/AMY.jpg" class="card-img-top w-50" alt="...">
+                        <img src="../imagenes/TOTO.jpg" class="card-img-top w-50" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">AMY</h5>
+                            <h3 class="card-title">TOTO</h3>
                             <p class="card-text">170g de carne Angus, provoleta, tomate perita asado, rúcula y
                                 mayonesa de
                                 chimichurri.</p>
+                                <button class="btn btn-primary" >Comprar</button>
                             <!-- <a href="#" class="btn btn-primary">Go somewhere</a>-->
                         </div>
                     </div>
