--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PruebaGrid</title>
+    <meta name="keywords" content="">
+    <meta name="description" content="">
+    <title>Hamburgueseria</title>
 
     <!--link de imagen de pestaña-->
     <link rel="shortcut icon" href="imagenes hamburguesa/logo_6.png" type="image/x-icon">
