--- a/pages/bebidas.html
+++ b/pages/bebidas.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hamburgueseria</title>
+    <title>Bebidas/Hamburgueseria</title>
 
     <!--link de imagen de pestaña-->
-    <link rel="shortcut icon" href="imagenes hamburguesa/logo_6.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../imagenes hamburguesa/logo_6.png " type="image/x-icon">
 
     <!--link WOW JS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
