--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ubicacion/Hamburgueseria</title>
     <!--link de BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!--link de imagen de pestaña-->
-    <link rel="shortcut icon" href="imagenes hamburguesa/logo_6.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../imagenes hamburguesa/logo_6.png " type="image/x-icon">
 
     <!--link WOW JS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
