--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
     <!--COMIENZA EL MAIN-->
 
-    <div class="main-index">
+    <main class="main-index">
       <div class="banner">
         <img src="imagenes hamburguesa/banner.png" alt="" />
       </div>
@@ -147,40 +147,38 @@
           allowfullscreen
         ></iframe>
       </div>
-    </div>
+    </main>
 
-    <div id="cajaFlex">
-      <!--COMIENZA EL FOOTER-->
-      <footer>
-        <div class="flex-1 animate__animated animate__backInUp">
-          <section class="sucursal">
-            <h2>SUCURSALES</h2>
-            <ul>
-              <li>Villa Del Parque</li>
-              <li>Recoleta</li>
-              <li>Palermo</li>
-            </ul>
-          </section>
-          <section class="imagen-footer">
-            <img src="imagenes hamburguesa/logo_6.png" alt="" />
-          </section>
-          <section class="iconos">
-            <a href="https://www.facebook.com/"
-              ><img src="imagenes hamburguesa/logo-facebook.png" alt=""
-            /></a>
-            <a href="https://www.instagram.com/"
-              ><img src="imagenes hamburguesa/instagram.png" alt=""
-            /></a>
-            <a href="https://twitter.com/"
-              ><img src="imagenes hamburguesa/gorjeo.png" alt=""
-            /></a>
-            <a href="https://www.whatsapp.com/"
-              ><img src="imagenes hamburguesa/whatsapp.png" alt=""
-            /></a>
-          </section>
-        </div>
-      </footer>
-    </div>
+    <!--COMIENZA EL FOOTER-->
+    <footer>
+      <div class="flex-1 animate__animated animate__backInUp">
+        <section class="sucursal">
+          <h2>SUCURSALES</h2>
+          <ul>
+            <li>Villa Del Parque</li>
+            <li>Recoleta</li>
+            <li>Palermo</li>
+          </ul>
+        </section>
+        <section class="imagen-footer">
+          <img src="imagenes hamburguesa/logo_6.png" alt="" />
+        </section>
+        <section class="iconos">
+          <a href="https://www.facebook.com/"
+            ><img src="imagenes hamburguesa/logo-facebook.png" alt=""
+          /></a>
+          <a href="https://www.instagram.com/"
+            ><img src="imagenes hamburguesa/instagram.png" alt=""
+          /></a>
+          <a href="https://twitter.com/"
+            ><img src="imagenes hamburguesa/gorjeo.png" alt=""
+          /></a>
+          <a href="https://www.whatsapp.com/"
+            ><img src="imagenes hamburguesa/whatsapp.png" alt=""
+          /></a>
+        </section>
+      </div>
+    </footer>
     <!--FIN CONTENEDOR PRINCIPAL-->
 
     <!--link bootstrap y js del body-->
