--- a/pages/bebidas.html
+++ b/pages/bebidas.html
@@ -103,7 +103,7 @@
 
     <!--##### MAIN #####-->
 
-    <main>
+    <main class="main-bebidas">
       <div id="contenedor">
         <div>
           <img src="../Imagenes bebidas/coca-cola-220ml.jpg" alt="" />
