--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -100,7 +100,7 @@
     </header>
 
     <!--comienza el main-->
-    <main>
+    <main class="main-contacto">
       <div id="centrarFormulario">
         <div class="contacto">
           <form class="row g-3 needs-validation" novalidate>
