--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
       crossorigin="anonymous"
     />
     <!--link mi css-->
-    <link rel="stylesheet" href="estilo.css" />
+    <!-- <link rel="stylesheet" href="estilo.css" /> -->
+
     <!-- link de SASS-->
     <link rel="stylesheet" href="scss/stylo.css" />
   </head>
