--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -28,7 +28,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <!--link mi css-->
-    <link rel="stylesheet" href="../estilo.css" />
+    <!-- <link rel="stylesheet" href="../estilo.css" /> -->
+
     <!-- link de SASS-->
     <link rel="stylesheet" href="../scss/stylo.css" />
   </head>
